changed home page

--- a/BarberShop/Views/Home/Index.cshtml
+++ b/BarberShop/Views/Home/Index.cshtml
@@ -3,12 +3,24 @@
 }
 
 <div class="jumbotron">
-    <h1>Scheduling a haircut has never been this easy!</h1>
+    <h1>Welcome to SoftBar, where we connect barbers and customers for a better haircut experience!</h1>
     
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Welcome To barbershop, where we will help you schedule your next haircut appointment.</h2>
-    </div>    
+        <h2>Barbers</h2>
+        <p>
+            Open a free account for your babershop, list all your barbers and their experience, prices and leave the rest up to us!
+        </p>
+        
+    </div>
+    <div class="col-md-4">
+        <h2>Customers</h2>
+        <p>Looking for a new barber but you have no idea where to go? tired of waiting hours to get a haircut? not satisfied with your haircut? then create a free account with us! finding the best barber has never been this easy!</p>
+    </div>
+    <div class="col-md-4">
+        <h2>About us</h2>
+        <p> We're a small company trying to end bad haircuts.</p>
+    </div>
 </div>
